--- a/css/style.css
+++ b/css/style.css
@@ -12,3 +12,15 @@
   font-weight: bold;
   text-align: center;
 }
+
+section{
+  width: 1200px;
+  margin: auto;
+}
+
+section > img {
+  text-align: center;
+  max-width: 300px;
+  max-height: 300px;
+  padding: 40px 40px 80px 40px;
+}
