--- a/css/style.css
+++ b/css/style.css
@@ -19,8 +19,9 @@ section{
 }
 
 section > img {
+  
   text-align: center;
-  max-width: 300px;
-  max-height: 300px;
+  width: 300px;
+  height: 300px;
   padding: 40px 40px 80px 40px;
 }
